tried fixing alignment, mat-tab-align is not working

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,8 +13,8 @@ app-footer, app-header{
 	text-align: center;
 }
 
-table{
-	align-self: center;
+::ng-deep mat-tab-header {
+	align-self:  center;
 }
 
 
